
===== history of distribution Mail-Box-POP3

version 3.005:

	Improvements:
	- cleanup ::POP3 coding style.

version 3.004: Sun Mar  4 15:17:07 CET 2018

	Improvements:
	- typo  rt.cpan.org#124013 [Damyan Ivanov] (debian)
	- convert to GIT and GitHub.

version 3.003: Sun 16 Jul 13:00:16 CEST 2017

	Improvements:
	- do not test when installing, only at module release.

version 3.002: Thu 29 Jun 15:07:19 CEST 2017

	Fixes:
	- license accidentally changed to 'artistic', back to 'perl'
	  rt.cpan.org#120319 [Jitka Plesnikova]

version 3.001: Thu  2 Feb 16:04:56 CET 2017

	Fixes:
	- bump version number caused by wrong IMAP4 packaging.

version 3.000: Thu  2 Feb 15:45:18 CET 2017

	Changes:
	- split-off from Mail::Box
	- supports perl from 5.10 (was 5.8.5)