@@ -5,6 +5,7 @@ version 3.005:
 
 	Improvements:
 	- cleanup ::POP3 coding style.
+	- wrong place to set default message type.
 
 version 3.004: Sun Mar  4 15:17:07 CET 2018
 
